fix alignment of number(s) in project work

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -248,6 +248,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	padding: 5px;
+	font-feature-settings: 'lnum' 1;
 }
 
 .projectsContainer .projectTwo{
@@ -257,6 +258,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	padding: 5px;
+	font-feature-settings: 'lnum' 1;
 }
 
 .projectsContainer .projectThree{
@@ -266,6 +268,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	padding: 5px;
+	font-feature-settings: 'lnum' 1;
 }
 
 .projectsContainer .projectFour{
@@ -275,6 +278,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	padding: 5px;
+	font-feature-settings: 'lnum' 1;
 }
 
 .projectsContainer .content{
